cleaned up utils

--- a/ml_forum_presentation.ipynb
+++ b/ml_forum_presentation.ipynb
@@ -87,7 +87,7 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter verification code:  4/1Adeu5BXU6rH_7EDnUsJhjaj9lAoNbR_k0ig6hrqEGLVHcW0vZUnbp7hd9yU\n"
@@ -493,75 +493,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "246e1361-ae9e-4705-8e5e-71021c9da3d8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import rasterio\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from google.cloud import storage\n",
-    "import io\n",
-    "import logging\n",
-    "from tqdm.notebook import tqdm\n",
-    "from shapely.geometry import Polygon\n",
-    "\n",
-    "logging.basicConfig(level=logging.INFO)\n",
-    "\n",
-    "def raster_to_tabular(bucket_name, file_name, band_names):\n",
-    "    logging.info(\"Starting raster to tabular conversion...\")\n",
-    "    \n",
-    "    if not band_names or not isinstance(band_names, list):\n",
-    "        raise ValueError(\"Band names must be provided as a list.\")\n",
-    "\n",
-    "    logging.info(\"Connecting to Google Cloud Storage...\")\n",
-    "    client = storage.Client()\n",
-    "    bucket = client.get_bucket(bucket_name)\n",
-    "    blob = bucket.blob(file_name)\n",
-    "    blob_content = blob.download_as_bytes()\n",
-    "\n",
-    "    logging.info(\"Reading raster into memory...\")\n",
-    "    virtual_file = io.BytesIO(blob_content)\n",
-    "\n",
-    "    with rasterio.open(virtual_file) as src:\n",
-    "        array = src.read()\n",
-    "        transform = src.transform\n",
-    "\n",
-    "    logging.info(\"Calculating x and y coordinates...\")\n",
-    "    x, y = np.meshgrid(\n",
-    "        np.arange(array.shape[2]) * transform[0] + transform[2],\n",
-    "        np.arange(array.shape[1]) * transform[4] + transform[5]\n",
-    "    )\n",
-    "\n",
-    "    logging.info(\"Calculating corners of each pixel...\")\n",
-    "    x1 = x\n",
-    "    y1 = y\n",
-    "    x2 = x1 + transform[0]\n",
-    "    y2 = y1 + transform[4]\n",
-    "\n",
-    "    logging.info(\"Flattening and transposing arrays...\")\n",
-    "    flattened_arrays = [band.flatten() for band in array]\n",
-    "    transposed_arrays = np.transpose(flattened_arrays)\n",
-    "\n",
-    "    logging.info(\"Calculating centroids and creating polygons...\")\n",
-    "    centroid_x, centroid_y = (x1 + x2) / 2, (y1 + y2) / 2\n",
-    "    polygons = [Polygon([(xi1, yi1), (xi2, yi1), (xi2, yi2), (xi1, yi2)]) for xi1, yi1, xi2, yi2 in tqdm(zip(x1.flatten(), y1.flatten(), x2.flatten(), y2.flatten()), total=x1.size, desc=\"Creating polygons\")]\n",
-    "    \n",
-    "    logging.info(\"Converting to DataFrame...\")\n",
-    "    df = pd.DataFrame(transposed_arrays, columns=band_names)\n",
-    "    df['x'], df['y'], df['geometry'] = centroid_x.flatten(), centroid_y.flatten(), polygons\n",
-    "\n",
-    "    logging.info(\"Completed raster to tabular conversion.\")\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a2f34b7e-a079-409f-b389-fa2aa0181fc7",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from utils import raster_to_tabular\n",
+    "\n",
     "# Usage - takes a while depending on the size of the AOI\n",
     "bucket_name = \"flood-model\"\n",
     "file_name = \"flood-composite-data.tif\"\n",
