update from ml forum feedback

--- a/ml_forum_presentation.ipynb
+++ b/ml_forum_presentation.ipynb
@@ -23,7 +23,10 @@
    "id": "065acc9a-5c2a-4a98-aace-712fc2e5b345",
    "metadata": {},
    "source": [
-    "In this activity, we'll explore the process of extracting raster data from sources like NWS, landcover, SAR data, DEM, and its related derivatives. We'll then transform these layers into a structured tabular format. With the data in this form, we'll be equipped to train a model in BigQuery to anticipate flood-prone zones. This will enable us to forecast flooded areas, and generate comprehensive reports detailing the impact on populations and infrastructure."
+    "- In this activity, we'll explore the process of extracting raster data from sources like NWS, landcover, SAR data, DEM, and its related derivatives. \n",
+    "- We'll then transform these layers into a structured tabular format. \n",
+    "- With the data in this form, we'll be equipped to train a model in BigQuery to anticipate flood-prone zones. \n",
+    "- This will enable us to forecast flooded areas, and generate comprehensive reports detailing the impact on populations and infrastructure."
    ]
   },
   {
@@ -36,6 +39,8 @@
     "## Setup\n",
     "\n",
     "### Environment\n",
+    "\n",
+    "Clone Repo from https://github.com/lanzij-oci/flood-bq-model.git\n",
     "\n",
     "For this Jupyter notebook to work, the user must set up the proper environment:\n",
     "\n",
@@ -503,11 +508,16 @@
     "bucket_name = \"flood-model\"\n",
     "file_name = \"flood-composite-data.tif\"\n",
     "band_names = ['dem',\n",
+    "              'dem_filled',\n",
     "              'slope',\n",
+    "              'hillshade',\n",
+    "              'flow_direction',\n",
     "              'flow_accumulation',\n",
     "              'stream_distance',\n",
     "              'landCover',\n",
-    "              'precip_2day',\n",
+    "              'precip_2day_0727',\n",
+    "              'precip_0726',\n",
+    "              'precip_0727',\n",
     "              'sar_before',\n",
     "              'sar_after',\n",
     "              'flood_mask',\n",
